modif pour test

--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
     <div class="jumbotron">
         <div class="container">        
             <h1>La bonne occase</h1>
-            <p class="lead">Trouvez la bonne occase !! Déja 23 272 779 annonces présentes.</h1>
+            <p class="lead">Trouvez la bonne occase !! Déja 15420 annonces présentes.</h1>
             <div class="row">
                 <div class="col-md-4">
                     <p><a class="btn btn-primary btn-lg btn-success" href="#" role="button">Déposer</a></p>
