Modification de texte

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>                
-                <a class="navbar-brand" href="#">La bonne occase</a>
+                <a class="navbar-brand" href="#">Enigmatic-ravine-2642</a>
             </div>
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                     <ul class="nav navbar-nav">
@@ -91,10 +91,11 @@
         </div>  
 
     </nav>  
-    <div class="jumbotron">
+    <div class="jumbotron" style="padding-top:10px;padding-bottom:10px">
         <div class="container">        
-            <h1>La bonne occase</h1>
-            <p class="lead">Trouvez la bonne occase !! Déja 15420 annonces présentes.</h1>
+            <h2>Enigmatic-ravine-2642</h2>
+            <small>Rien ne fait marcher le temps et n'abrège la route comme une pensée qui absorbe en elle-même toutes les facultés de l'organisation de celui qui pense. L'existence extérieure ressemble alors à un sommeil dont cette pensée est le rêve. Par son influence, le temps n'a plus de mesure, l'espace n'a plus de distance.</small>
+                <br/> <br/> 
             <div class="row">
                 <div class="col-md-4">
                     <p><a class="btn btn-primary btn-lg btn-success" href="#" role="button">Déposer</a></p>
@@ -107,7 +108,7 @@
                 </div>                
             </div>
         </div>        
-    </div>        
+    </div>      
     <div class="container">
             <div class="row">     
                 <div class="col-md-5" align="center">
