--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
                             </a>
                         </li>
                         <li>
-                            <a style="padding-bottom:5px" href="https://twitter.com/intent/tweet?text=Node+and+Angular+To-Do+App%3A+Application+Organization+and+Structure&url=http://scotch.io/tutorials/javascript/node-and-angular-to-do-app-application-organization-and-structure&via=scotch_io&related=scotch_io">
+                            <a style="padding-bottom:5px" href="https://twitter.com/intent/tweet?text=ENIGMATIC-RAVINE-2642&url=http://ENIGMATIC-RAVINE-2642&via=ENIGMATIC-RAVINE-2642&related=ENIGMATIC-RAVINE-2642">
                                 <span class="fa-stack fa-lg">
                                   <i style="-webkit-transform: rotate(2132deg);" class="fa fa-twitter"></i>
                                 </span>
