--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
                             </a>
                         </li>
                         <li>
-                            <a style="padding-bottom:5px" href="https://twitter.com/intent/tweet?text=ENIGMATIC-RAVINE-2642&url=http://ENIGMATIC-RAVINE-2642&via=ENIGMATIC-RAVINE-2642&related=ENIGMATIC-RAVINE-2642">
+                            <a style="padding-bottom:5px" href="https://twitter.com/intent/tweet?text=ENIGMATIC-RAVINE-2642&url=http://enigmatic-ravine-2642.herokuapp.com&via=Heroku-ENIGMATIC-RAVINE-2642&related=Heroku-ENIGMATIC-RAVINE-2642">
                                 <span class="fa-stack fa-lg">
                                   <i style="-webkit-transform: rotate(2132deg);" class="fa fa-twitter"></i>
                                 </span>
