--- a/public/index.html
+++ b/public/index.html
@@ -60,12 +60,12 @@
 
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/users/sign_up"><span class="fa fa-user"></span> Nouveau</a></li> 
+                        <li><a href="#"><span class="fa fa-user"></span> Nouveau</a></li> 
                         <li class="divider-vertical"></li>
                         <li class="dropdown">
                             <a class="dropdown-toggle" href="#" data-toggle="dropdown">Login<strong class="caret"></strong></a>
                             <div class="dropdown-menu login-menu well" style="padding-left: 30px; padding-bottom: 0px;">
-                                <form class="bs-example form-horizontal" action="[YOUR ACTION]" method="post" accept-charset="UTF-8">
+                                <form class="bs-example form-horizontal" action="#" method="post" accept-charset="UTF-8">
                                     <fieldset style="width:300px">
                                       <div class="form-group">
                                         <div class="col-lg-10">
