Gestion des routes

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
                         <li class="dropdown">
                             <a class="dropdown-toggle" href="#" data-toggle="dropdown">Login<strong class="caret"></strong></a>
                             <div class="dropdown-menu login-menu well" style="padding-left: 30px; padding-bottom: 0px;">
-                                <form class="bs-example form-horizontal" action="/users/sign_in" method="post" accept-charset="UTF-8">
+                                <form class="bs-example form-horizontal" action="/users/session" method="post" accept-charset="UTF-8">
                                     <fieldset style="width:300px">
                                       <div class="form-group">
                                         <div class="col-lg-10">
