Change bg image

--- a/public/index.html
+++ b/public/index.html
@@ -94,17 +94,16 @@
     <div class="jumbotron" style="padding-top:10px;padding-bottom:10px">
         <div class="container">        
             <h2>Enigmatic-ravine-2642</h2>
-            <small>Rien ne fait marcher le temps et n'abrège la route comme une pensée qui absorbe en elle-même toutes les facultés de l'organisation de celui qui pense. L'existence extérieure ressemble alors à un sommeil dont cette pensée est le rêve. Par son influence, le temps n'a plus de mesure, l'espace n'a plus de distance.</small>
-                <br/> <br/> 
-            <div class="row">
-                <div class="col-md-4">
-                    <p><a class="btn btn-primary btn-lg btn-success" href="#" role="button">Déposer</a></p>
-                </div>
-                <div class="col-md-4">
-                    <p><a class="btn btn-lg btn-success btn-success" href="#" role="button">Offres</a></p>            
+           
+            <div class="row" style="margin-top:350px">
+                <div class="col-md-1">
+                    <p><a class="btn btn-info" href="#" role="button">Offres</a></p>            
                 </div>   
-                <div class="col-md-4">
-                    <p><a class="btn btn-lg btn-success btn-success" href="#" role="button">Demandes</a></p>                        
+                <div class="col-md-2">
+                    <p><a class="btn btn-warning" href="#" role="button">Demandes</a></p>                        
+                </div>                
+                <div class="col-md-2">
+                    <p><a class="btn btn-success" href="#" role="button">Déposer</a></p>
                 </div>                
             </div>
         </div>        
