Form contatc - signin - route

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span> Accueil</a></li>
                         <li><a href="#"><span class="glyphicon glyphicon-star"></span> Top Produits</a></li>
-                        <li><a href="#">Contact</a></li>                        
+                        <li><a href="/contact">Contact</a></li>                        
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li>
@@ -50,37 +50,13 @@
                     </ul>                 
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#"><span class="fa fa-user"></span>Sign up</a></li> 
-                        <li class="divider-vertical"></li>
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign in</a>
-<!--                             <div class="dropdown-menu login-menu well" style="padding-left: 30px; padding-bottom: 0px;">
-                                <form class="bs-example form-horizontal" action="/users/session" method="post" accept-charset="UTF-8">
-                                    <fieldset style="width:300px">
-                                      <div class="form-group">
-                                        <div class="col-lg-10">
-                                          <input type="text" class="form-control" name="username" placeholder="Email">
-                                        </div>
-                                      </div>
-                                      <div class="form-group">
-                                        <div class="col-lg-10">
-                                          <input type="password" class="form-control" name="password" placeholder="Password">
-                                        </div>
-                                      </div>
-                                      <div class="form-group">
-                                        <div class="col-lg-10 col-lg-offset-2">
-                                          <button type="submit" class="btn btn-primary">Submit</button> 
-                                        </div>
-                                      </div>
-                                      </fieldset>
-                                </form>
-                            </div> -->
-                        </li>                        
+                        <li><a href="/signin"><span class="fa fa-user"></span>Sign in</a></li>                      
                     </ul>                                                                                   
             </div>      
         </div>  
 
     </nav>  
-    <div class="jumbotron" style="padding-top:10px;padding-bottom:10px">
+    <div class="jumbotron jumbotron-accueil" style="padding-top:10px;padding-bottom:10px">
         <div class="container">        
             <h3></h3>           
         </div>        
