--- a/public/contact.html
+++ b/public/contact.html
@@ -56,25 +56,33 @@
         </div>  
     </nav>  
     <div class="container">
-        <form class="bs-example form-horizontal form-signin" action="/users/session" method="post" accept-charset="UTF-8">
-            <h2 class="form-signin-heading">Merci de vous authentifier</h2> 
-            <fieldset style="width:300px">
-              <div class="form-group">
-                <div class="col-lg-10">
-                  <input type="text" class="form-control" name="username" placeholder="Email">
+        <form class="bs-example form-horizontal form-contact" action="/users/session" method="post" accept-charset="UTF-8">
+            <h2 class="form-signin-heading">Contacter le site</h2> 
+              <div class="row">
+                <div class="col-lg-12" style="margin:10px">
+                    <input type="text" class="form-control" name="username" placeholder="Nom">
                 </div>
-              </div>
-              <div class="form-group">
-                <div class="col-lg-10">
-                  <input type="password" class="form-control" name="password" placeholder="Password">
+              </div><!-- /.row -->
+              <div class="row">
+                <div class="col-lg-12" style="margin:10px">
+                    <input class="form-control" name="email" placeholder="Email">
                 </div>
-              </div>
-              <div class="form-group">
-                <div class="col-lg-10 col-lg-offset-2">
-                  <button type="submit" class="btn btn-primary">Valider</button> 
+              </div><!-- /.row -->          
+              <div class="row">
+                <div class="col-lg-12" style="margin:10px">
+                    <input type="text" class="form-control" name="sujet" placeholder="Sujet">
                 </div>
-              </div>
-              </fieldset>
+              </div><!-- /.row -->       
+              <div class="row">
+                <div class="col-lg-12" style="margin:10px">
+                    <textarea class="form-control" rows="7" id="form_comments" name="form[comments]" placeholder="Merci de saisir votre message" required="true"></textarea>
+                </div>
+              </div><!-- /.row -->    
+              <div class="row">
+                <div class="col-lg-12" style="margin:10px">
+                    <button type="submit" class="btn btn-primary">Valider</button> 
+                </div>
+              </div><!-- /.row -->                                               
         </form>        
     </div>              
 </body>
