--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <script src="js/controllers/MainCtrl.js"></script>
     <script src="js/controllers/SignCtrl.js"></script> 
     <script src="js/controllers/ContactCtrl.js"></script>     
+    <script src="js/controllers/LogoutCtrl.js"></script>      
 </head>
 <body ng-app="sampleApp" ng-controller="MainController">
     <nav class="navbar-wrapper navbar-default navbar-fixed-top" role="navigation">
@@ -58,10 +59,14 @@
                         </a>
                     </li>
                 </ul>                 
-                <ul class="nav navbar-nav navbar-right" ng-hide="{{User.connected}}">
+                <ul class="nav navbar-nav navbar-right" ng-hide="User.connected">
                     <li><a href="#"><span class="fa fa-user"></span>Sign up</a></li> 
                     <li><a href="/signin"><span class="fa fa-user"></span>Sign in</a></li>
                 </ul>
+                <ul class="nav navbar-nav navbar-right" ng-show="User.connected">
+                    <li><a href="#"><span class="fa fa-user"></span>Bienvenu(e) {{User.firstname}}</a></li> 
+                    <li><a href="/logout"><span class="fa fa-user"></span>Logout</a></li>
+                </ul>                
             </div>      
         </div>  
     </nav>  
