--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
     <script src="js/services/global.js"></script>
     <script src="js/controllers/MainCtrl.js"></script>
     <script src="js/controllers/SignCtrl.js"></script> 
-    <script src="js/controllers/SignupCtrl.js"></script>     
+    <script src="js/controllers/SignupCtrl.js"></script>  
+    <script src="js/controllers/AuthCtrl.js"></script>        
     <script src="js/controllers/ContactCtrl.js"></script>     
     <script src="js/controllers/LogoutCtrl.js"></script>      
     <script src="js/controllers/Add_annonceCtrl.js"></script>        
